# simple_c_http_server

./: CMakeLists.txt  README.md
src/: common.h  main.c  request.c  request.h  response.c  response.h  server.c  server.h
